[package]
name = "player-rs"
edition = "2021"

[dependencies]
ffmpeg-next = { version = "7.1", features = [
    "format",
    "codec",
    "software-resampling",
    "software-scaling",
] }
# ndarray用于多维数组的创建和操作
ndarray = "0.16"

# tracing用于跟踪程序的执行过程，便于调试
tracing = "0.1"

# url用于处理和解析URL
url = "2"

[features]
# 声明项目的默认特性，包含 ndarray 特性
default = ["ndarray"]
# 声明 ndarray 特性所包含的内容
ndarray = []

[build-dependencies]
pkg-config = "0.3"
